Fix all karma unit tests

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GraphqlAngularWeatherforecast</title>
+  <title>Graphql Angular Weatherforecast</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="This is Angular version of the weather forecast published earlier using ReactJS">
+  <meta name="keywords" content="HTML, CSS, Typescript, Angular 18.2">
+  <meta name="author" content="Prince Cheruvathur">
+ <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
